# datafest-winter

./: .dockerignore  .gitignore  decision_tree.ipynb  knn.ipynb  main.py  pyproject.toml  utils.py
.devcontainer/: Dockerfile  devcontainer.json
data/breast_cancer/: README.md
data/house_votes_84/: README.md  house_votes_84.csv
data/iris/: README.md
data/penguins/: README.md  penguins.csv
data/spam/: README.md
data/titanic/: README.md  titanic.csv
data/wine/: README.md  wine.csv
modules/: decision_tree.ipynb  knn.ipynb  random_forest.ipynb
notebooks/: decision_tree.ipynb  knn.ipynb  linear_regression.ipynb  logistic_regression.ipynb  naive_bayes.ipynb  neural_network.ipynb  random_forest.ipynb
utils/: __init__.py  model_utils.py  visuals.py
